--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         font-family: "Open Sans", sans-serif;
         margin-left: 30px;
         margin-right: 30px;
-        background-color: white;
+        background-color: darkgreen;
         color: black; /* sets the font color */
         background-image: url(""); /* The image used */
         background-position: center; /* Center the image */
@@ -115,7 +115,7 @@
       }
 
       #container {
-        background-color: pink;
+        background-color: olivedrab;
         margin: 40px auto;
         max-width: 800px;
         padding: 38px 31px;
@@ -137,7 +137,7 @@
       }
 
       #output-div {
-        background-color: lightgrey;
+        background-color: beige;
         margin: 20px auto;
         padding: 20px;
         width: 100%;
@@ -172,6 +172,29 @@
     </h1>
     <h1 class="header">♣️ Basics - Blackjack ♠️</h1>
     <div id="container">
+      <p>Welcome to Blackjack! The rules of the game are as follows:</p>
+      <p>
+        1. In this game, picture cards (J, Q, K) are worth 10 points, and Aces
+        are worth either 11 or 1.
+      </p>
+      <p>
+        2. The game starts with each player dealt two cards. If any player has a
+        starting hand worth 21 points, i.e. an Ace with a 10, J, Q or K, they
+        win immediately!
+      </p>
+      <p>
+        3. If not, you get to choose if you want to hit (draw a card) or stand
+        (move on to dealer's turn).
+      </p>
+      <p>
+        4. During the dealer/computer's turn, it will draw until it has 17 or
+        more points.
+      </p>
+      <p>
+        5. Once all players have stood, the total point values of hands are
+        compared. Any hand above 21 points is bust and loses. The player with
+        the highest remaining hand wins!
+      </p>
       <p>Input:</p>
       <input id="input-field" />
       <br />
