added basic betting functions

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         win immediately!
       </p>
       <p>
-        3. If not, you get to choose if you want to hit (draw a card) or stand
-        (move on to dealer's turn).
+        3. You go first, and you get to choose if you want to hit (draw a card)
+        or stand (move on to dealer's turn).
       </p>
       <p>
         4. During the dealer/computer's turn, it will draw until it has 17 or
@@ -195,13 +195,18 @@
         compared. Any hand above 21 points is bust and loses. The player with
         the highest remaining hand wins!
       </p>
+      <p>
+        6. Betting has been implemented! You start with 100 chips and must bet
+        10 or more every turn, before cards are dealt.
+      </p>
       <p>Input:</p>
       <input id="input-field" />
       <br />
       <button id="submit-button">Submit</button>
       <p>Output:</p>
       <div id="output-div">
-        Welcome to Blackjack! Click 'Submit' to get started!
+        Welcome to Blackjack! You have 100 chips. Input your bet and click
+        'Submit' to get started!
       </div>
     </div>
     <!-- Import program logic -->
