added hidden dealer card fuctionality. changed rules so that player bust ends in loss immediately.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
       </p>
       <p>
         3. You go first, and you get to choose if you want to hit (draw a card)
-        or stand (move on to dealer's turn).
+        or stand (move on to dealer's turn). If your hand goes above 21, you
+        lose immediately.
       </p>
       <p>
         4. During the dealer/computer's turn, it will draw until it has 17 or
@@ -192,12 +193,13 @@
       </p>
       <p>
         5. Once all players have stood, the total point values of hands are
-        compared. Any hand above 21 points is bust and loses. The player with
-        the highest remaining hand wins!
+        compared. Uf dealer has busted, you win. If not, the player with the
+        highest remaining hand wins!
       </p>
       <p>
         6. Betting has been implemented! You start with 100 chips and must bet
-        10 or more every turn, before cards are dealt.
+        between 10 chips and half of your remaining chips every turn, before
+        cards are dealt.
       </p>
       <p>Input:</p>
       <input id="input-field" />
@@ -205,8 +207,8 @@
       <button id="submit-button">Submit</button>
       <p>Output:</p>
       <div id="output-div">
-        Welcome to Blackjack! You have 100 chips. Input your bet and click
-        'Submit' to get started!
+        Welcome to Blackjack! You have 100 chips. Input your bet (between 10 and
+        50) and click 'Submit' to get started!
       </div>
     </div>
     <!-- Import program logic -->
