multiplayer implemented up to midway through dealing starting hand phase

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
       <button id="submit-button">Submit</button>
       <p>Output:</p>
       <div id="output-div">
-        Welcome to Blackjack! You have 100 chips. Input your bet (between 10 and
-        50) and click 'Submit' to get started!
+        Welcome to Blackjack! Input the number of players and click 'Submit' to
+        get started!
       </div>
     </div>
     <!-- Import program logic -->
